src/App.css
#root {
  max-width:1280px;
  margin: 0 auto;
  text-align: center;
}

img {
  max-width: 1280px;
  width: 100%;
}

.active {
    color: red; /* Change the color to whatever you prefer */
    font-weight: bold; /* Optional: Makes the text bolder */ 
}

.highlighted {
  color: rgb(0, 255, 98); /* Or any other style you want for the active title */
}

.miles {
  width:35%;
}

ul {
  list-style-type: none;
}

.header-wave-container {
  position: relative;
  overflow: hidden; /* Ensures the wave doesn't extend beyond its container */
  background-image: url('https://t4.ftcdn.net/jpg/01/56/20/55/360_F_156205552_b1k0NrNInhl8jzD00eQNZlbChOsuZHs0.jpg'); /*The path to my image */
  background-size: cover; /* Covers the entire container */
  background-position: center; /* Centers the background image */
  background-repeat: no-repeat; /* Prevents the image from repeating */
}

.header-navigation-wrapper {
  position: absolute;
  top: 45px;
  left: 0;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 1; /* Ensuring it's above the wave */
  flex-direction: column;
}

.app-content {
  padding-top: 60px;
  background-color: rgb(76, 155, 187);
}

footer {
  display: flex;
  flex-direction: column;
  background-color: rgb(155, 177, 252);
}

footer p {
  color:rgb(141, 50, 50);
}

nav {
  display: flex;
}

ul {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

h1 {
  color: rgb(121, 14, 14);
  font-weight: bold;
  font-family: Arial, Helvetica, sans-serif;
  font-size:25px;
}

h2 {
  color: white;
  font-family:Arial, Helvetica, sans-serif;
}

h3 {
  font-family: Arial, Helvetica, sans-serif;
  color: rgb(0, 255, 0);
  font-size: 20px;
}

a {
  list-style-type: none;
  font-size: 16px;
  font-weight: bold;
  font-family: Arial, Helvetica, sans-serif;
  color: #0e13a3;
  margin: 10px;
}

a:link {
  text-decoration: none;
}

a:hover {
  color: yellow;
}

p {
  color: white;
  font-family:Arial, Helvetica, sans-serif;
  font-weight: bold;
}

footer p {
  font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
}

img {
  max-width: 1280px;
}

form {
  display: flex;
  flex-direction: column;
  align-items: center;
  size:50;
  padding-left: 20px;
}

.input-field {
  width: 30%;

}

.input-message {
  width:30%;
  height:200px;
}

label {
  display: flex;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 20px;
  margin: 10px;
  font-weight: bold;
  color: whitesmoke;
}

button {
  background-color: blue;
  color: white;
  margin: 15px;
  padding: 15px;
  font-size: 18px;
}

